# Edge-onnx-benchmark

./: .gitignore  README.md  requirements.txt  run_pipeline.py
benchmarks/: analyze_onnx_profile.py  benchmark_executorch.py  benchmark_memory_usage.py  benchmark_onnx_inference.py  benchmark_onnxruntime_cuda.py  benchmark_pytorch_cuda.py  benchmark_tflite.py  compute_scaling_metrics.py  inspect_onnx_model.py  measure_single_model_memory.py  plot_architecture_diagram.py  plot_cpu_usage_scaling.py  plot_cuda_vector_add_sweep.py  plot_executorch_thread_scaling.py  plot_onnx_latency.py  plot_runtime_comparison.py  plot_scaling_advanced.py  plot_tensorrt_precision.py  run_executorch_inference.py  run_executorch_scaling.py
cpp_inference/: CMakeLists.txt  main.cpp
docs/: CUDA_BACKEND_ANALYSIS.md  EDGE_AI_DEPLOYMENT_PLAYBOOK.md  EDGE_AI_HARDWARE_CONSTRAINTS.md  EDGE_AI_PERFORMANCE_ENGINEERING.md  EDGE_AI_RUNTIME_INTERNALS.md  EDGE_AI_SYSTEM_DESIGN.md  INT8_ROOT_CAUSE_ANALYSIS.md  MEMORY_AND_ARTIFACT_ANALYSIS.md  MULTI_RUNTIME_COMPARISON.md  ON_DEVICE_WORKFLOW.md  QUANTIZATION_ANALYSIS.md  RUNTIME_ARCHITECTURE_ANALYSIS.md  RUNTIME_COMPARISON_ANALYSIS.md  RUNTIME_FAILURE_ANALYSIS.md  THREAD_SCALING_AND_ROOFLINE_ANALYSIS.md
executorch_export/: export_mobilenet_pte.py
models/: mobilenet_v2_fp32.onnx  mobilenet_v2_int8.onnx
results/: cpp_benchmark.csv  mobilenet_v2_fp32_accuracy.csv  mobilenet_v2_fp32_bs1_t1_benchmark.csv  mobilenet_v2_int8_accuracy.csv  mobilenet_v2_int8_bs1_t1_benchmark.csv  mobilenet_v2_int8_bs1_t4_benchmark.csv  mobilenet_v2_optimized_accuracy.csv  (+12 more)
(+30 files in other folders)
